Improved Card Manager and Fixed Bugs